syntax = "proto3";

option go_package = "github.com/hatefulmoron/resi/protos/protos";
package protos;

message Packet {
  uint64 sn = 1;
  bool upgrade = 2;
  bytes data = 3;
}

message RedundancyTSN {
  uint64 tsn = 1;
}

message RedundancyMergeRequest {
  string cookie = 1;
}

message RedundancyResponse {
  string addr = 1;
  string cookie = 2;
}

message RedundancyCookieRequest {
}

message RedundancyRequest {
  oneof ty {
    RedundancyCookieRequest cookie = 1;
    RedundancyMergeRequest merge = 2;
  }
}
